--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.3.0",
-    "@mui/material": "^6.3.0",
+    "@mui/material": "^6.4.0",
     "@mui/styled-engine-sc": "^6.3.0",
+    "@mui/x-date-pickers": "^7.23.6",
     "leaflet": "^1.9.4",
-    "react": "^19.0.0-rc.1",
+    "moment": "^2.30.1",
+    "react": "^19.0.0",
     "react-dom": "^19.0.0-rc.1",
     "react-leaflet": "^5.0.0-rc.2",
-    "styled-components": "^6.1.13"
+    "react-vega": "^7.6.0",
+    "styled-components": "^6.1.13",
+    "vega": "^5.30.0",
+    "vega-lite": "^5.23.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
