--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^6.4.0",
     "@mui/styled-engine-sc": "^6.3.0",
     "@mui/x-date-pickers": "^7.23.6",
+    "dayjs": "^1.11.13",
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "react": "^19.0.0",
